--- a/templates/about.html
+++ b/templates/about.html
@@ -3,17 +3,17 @@
 <html>
 <head>
 {% include "head.html" %}
-<title>{{ app_title.0 }}</title>
+<title>ME AND ME. LEO</title>
 </head>
 <body page_id="{{ page_id }}">
     
     {% include "nav.html" %}
     
-
+    
     <div class="wrap">
-
+        
         <div class="container">
-
+            <div id="come_soon">COMING SOON...</div>
             <div class="grid-container no-margin">
                 <img src="/static/image/brand/ME AND MR. LEO.png">
                 <img src="/static/image/brand/TRENOVKR.jpg">
@@ -27,7 +27,7 @@
             </div>
 
         </div>
-
+        
 
         
     </div>
@@ -35,6 +35,6 @@
 
 
     {% include "footer.html" %}
-    
+   
 </body>
 </html>
