--- a/templates/admin.html
+++ b/templates/admin.html
@@ -27,12 +27,8 @@
         <!-- 
             commit listing data done
          -->
-        <div class="container">
-            <ul>
-                <li><a style="font-size: 20px;" href="{{ edit_index }}">Edit Index</a></li>
-                <li><a style="font-size: 20px;" href="{{ edit_listing }}">Edit Listing</a></li>
-            </ul>
-            
+        <div class="container" id="come_soon">
+            COMING SOON...
         </div>
         
     </div>
