--- a/templates/my-account.html
+++ b/templates/my-account.html
@@ -13,7 +13,7 @@
     <div class="wrap">
 
         <div class="container flex-container">
-            <div>
+            <div class="account-info">
                 <fieldset>
                     <legend>MyAccount</legend>
                     <br>
@@ -30,7 +30,7 @@
                     <div><a href="myAccount&=edit">[Edit Account]</a><a href="logout">[Logout]</a></div>
                 </fieldset>
             </div>
-            <div>
+            <div class="order-info">
                 <fieldset>
                     <legend>MyCoupon</legend>
                     <div style="float: left; margin-left: 1%;">Title: Ceramic Hamsa Hand Incense Holder Ceramic Hamsa Hand Incense Holder Ceramic Hamsa</div>
