--- a/templates/test.html
+++ b/templates/test.html
@@ -2,18 +2,109 @@
 <!DOCTYPE html>
 <html>
 <head>
-{% include "head.html" %}
-<title>{{ app_title.0 }}</title>
-</head>
-<body>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="referrer" content="no-referrer">
 
-    <div class="grid">
-        <header>header</header>
-        <div class="mid"> mid </div>
-        <div class="left"> left </div>
-        <div class="right"> right </div>
-        <footer>footer</footer>
-    </div>
+<!-- del temp-->
+<meta http-equiv="Expires" content="0">
+<meta http-equiv="Cache-Control" content="no-cache">
+<meta http-equiv="Pragma" content="no-cache">
+
+<!-- Google Fonts -->
+<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,200,0,0" /> -->
+
+<!-- Web Icon -->
+<link rel="icon" href="/static/image/ico/l&j.ico" type="image/x-icon" />
+
+<!-- CSS -->
+<!-- <link type="text/css" rel="stylesheet" media="all" href="/static/css/main.css"> -->
+<!-- <link type="text/css" rel="stylesheet" media="all" href="/static/css/layout.css"> -->
+<!-- <link type="text/css" rel="stylesheet" media="all" href="/static/css/module.css"> -->
+<style>
+.container
+{
+width: 98%;
+margin: auto;
+}
+.grid-container
+{
+display: grid;
+/* grid-gap: 8% 2%; */
+grid-gap: 10px;
+grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+grid-template-rows: auto;
+justify-content: space-around;
+}
+</style>
+<!-- Js -->
+<!-- <script src="/static/js/base.js" defer="defer"></script>
+<script src="/static/js/account.js" defer="defer"></script>
+<script src="/static/js/price.js" defer="defer"></script> -->
+<script>
+// function resizeFunction()
+// {
+//     // 打印页面默认加载时的宽度
+//     console.log('bodyWid:', document.body.clientWidth)
+//     console.log('bodyHei:', document.body.clientHeight)
+
+//     var bodyWid = document.body.clientWidth
+//     var bodyHei = document.body.clientHeight
+
+// }
+
+// // 监听事件及运行函数体
+// // window.addEventListener("resize", resizeFunction);
+
+// // 页面加载时，运行函数体
+// window.onload = function()
+// {  
+//     resizeFunction()
+//     a = document.getElementById('a')
+//     b = document.getElementById('b')
+//     c = document.getElementById('c')
+//     console.log('wrap:', a.clientHeight, a.offsetHeight)
+//     console.log('container:', b.clientHeight, b.offsetHeight)
+//     console.log('footer:', c.clientHeight, c.offsetHeight)
+// }
+</script>
+<title></title>
+</head>
+<body style=" background-color: bisque; ">
+
+    <nav style="min-height: 100px; background-color: #ff0000;">
+        sss
+    </nav>
     
+    <main class="container grid-container" style="background-color: #ffbb00; border: 1px solid #ff0000;">
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
+        
+    </main>
+
+    <footer id="c" style="height: 150px; background: rgb(0, 0, 0, 0.2);">
+        fffff
+    </footer>
 </body>
 </html>
