--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -18,12 +18,13 @@ wrap > container > grid
 .wrap
 {
   width: 100%;
+  /* padding-top: 1%; */
 }
-.grid
+/* .grid
 {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-}
+} */
 
 /* flex布局，自动排列及换行，且2边对齐 */
 .flex-container
@@ -92,11 +93,12 @@ wrap > container > grid
   {
     display: grid;
     /* grid-gap: 8% 2%; */
-    /* grid-gap: 2%; */
-    grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+    grid-gap: 60px 30px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
     grid-template-rows: auto;
     margin-top: 3%;
-    margin-bottom: 12%;
+    margin-bottom: 6%;
+    justify-content: space-evenly;
   }
   .grid-listing
   {
@@ -129,11 +131,7 @@ wrap > container > grid
   {
     display: none;
   }
-  p
-  {
-    line-height: 22px;
-    padding: 20px;
-  }
+
 }
 /* 小于980 针对移动端*/
 @media screen and (max-width:980px)
@@ -141,11 +139,11 @@ wrap > container > grid
   .grid-container
   {
     display: grid;
-    grid-gap: 1.5%;
+    grid-gap: 80px 30px;
     grid-template-columns: repeat(2, auto);
     grid-template-rows: repeat(12, auto);
     margin-top: 3%;
-    margin-bottom: 39%;
+    margin-bottom: 20%;
     margin-left: 1%;
     margin-right: 1%;
   }
