--- a/static/css/main.css
+++ b/static/css/main.css
@@ -20,7 +20,7 @@ wrap > container > grid
   margin: 0;
   text-decoration: none;
 }
-html,body
+html
 {
   height: auto;
   margin: 0;
@@ -29,8 +29,9 @@ html,body
 body
 {
   display: flex;
-  min-height: 100vh;
+  min-height: 100%;
   flex-direction: column;
+  /* position: relative; */
 }
 /*************************************************LINE*************************************************/
 /*************************************************
@@ -64,25 +65,36 @@ nav > .nav-mini > ul *
   margin: auto;
   line-height: 150px;
 }
-ul.app-list
+
+main
+{
+  width: 100%;
+  padding-top: 1%;
+}
+
+ul.nav-app-list
 {
   /* width: 50%; */
   /* margin: auto; */
-  width: 20%;
+  width: 30%;
   /* width: max-content; */
   margin-left: 10%;
 }
-ul.app-list *
+ul.nav-app-list > li{
+  width: 35%;
+}
+ul.nav-app-list *
 {
   text-align: center;
-  line-height: 50px;
+  line-height: 55px;
   margin: 0;
 }
-ul.app-list > li  > a
+
+ul.nav-app-list > li  > a
 {
   color: rgb(95, 147, 112);
 }
-ul.app-list > li > a:hover
+ul.nav-app-list > li > a:hover
 {
   /* color: #ff6666; */
   color: rgb(51, 95, 66);
@@ -108,11 +120,15 @@ ul
   width: auto;
   white-space: nowrap;
 }
-li, p
+/* li, p
 {
   margin: 3% 0;
   padding: 0;
-  /* line-height: 36px; */
+} */
+p
+{
+  line-height: 22px;
+  padding: 5px;
 }
 li
 {
@@ -127,7 +143,7 @@ a
 a:hover
 {
   /* color: #ff6666; */
-  color: #666;
+  color: #999;
 }
 /* Google OPSZ ICON*/
 a.size-30
@@ -153,6 +169,8 @@ footer
   background: #f5f5f5;
   border-top: 1px solid #f5f5f5;
   margin-top: auto;
+  /* position: absolute;
+  bottom: -300px; */
 }
 footer *
 {
@@ -210,6 +228,15 @@ footer *
 .padding-20
 {
   padding: 2%;
+}
+.price > span
+{
+  padding-left: 0.5%;
+  /* padding-right: 0.5%; */
+}
+.price > span.price-symbol,.price > span:last-child
+{
+  padding-top: 6px;
 }
 /*************************************************LINE*************************************************/
 
