--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="container grid padding-t-b">
+    <div class="container flex-container padding-t-b">
         <div>
             <h3><b>Brand</b></h3>
             <ul>
@@ -18,6 +18,6 @@
         <div></div>
     </div>
     <div class="container padding-b">
-        Copyright © 2020-{{ timezone.date.year }} 3.9Kr Inc. All rights reserved. 
+        Copyright © 2020-{{ timezone }} 3.9Kr Inc. All rights reserved. 
     </div>
 </footer>
