--- a/templates/index.html
+++ b/templates/index.html
@@ -3,70 +3,124 @@
 <html>
 <head>
 {% include "head.html" %}
-<title>{{ app_title.0 }}</title>
+<title>ME AND ME. LEO</title>
 </head>
 <body page_id="{{ page_id }}">
     
     {% include "nav.html" %}
-    
 
-    <div id="B0BTXB89PG" class="wrap" img_name="{{ img_name.B0BTXB89PG }}">
-    <div>{{ test }}</div>
+    <!--------------------------------->
+    <!----- promote-banner-module ----->
+    <!--------------------------------->
+    <!-- <div id="B0BTXB89PG" class="wrap" img_name="{{ img_name.B0BTXB89PG }}"> -->
+    <div id="banner" name="B0BTXB89PG" class="wrap" img_name="{{ img_name.B0BTXB89PG }}">
+
         <div style="box-shadow: inset 0px -1px 30px 1px rgb(0, 0, 0, 0.3); height: 100%;">
             <div class="position">
                 <div>
-                    <h1 class="stronger">{{ product_description.0.bullet_point_01 }}</h1>
+                    <h1 class="stronger">{{ promote_info.bullet_point_01 }}</h1>
                 </div>
                 <div>
-                    <span>{{ product_description.0.bullet_point_02 }}</span>
+                    <span>{{ promote_info.bullet_point_02 }}</span>
                 </div>
                 <div>
-                    <a href="products&asin={{ product_description.0.asin }}{{ includ_user_id_url }}" class="learnMore auto-margin">Learn more</a>
+                    <a href="{{ promote_url }}" class="learnMore auto-margin">Learn more</a>
                 </div>
             </div>
         </div>
 
     </div>
 
-    <!-- module img left text right -->
+    <!-------------------------------->
+    <!------ promote-sku-module ------>
+    <!------ img left text right ----->
+    <!-------------------------------->
     <div class="wrap">
         <div class="container grid-container" style="padding: 10% 0;">
             <div style="height: 500px; text-align: center;"><img src="{{ first_img.0.first_img }}" style="width: auto; height: 100%;" alt=""></div>
             <div style="height: 100%; padding: 10%;">
                 <div style="margin-bottom: 3%;"><h1>Ceramic Hamsa Hand Incense Holder</h1></div>
                 <div style="margin-bottom: 9%;"><h4>{{ product_title.title }}</h4></div>
+                <div style="margin-bottom: 9%;">
+                    <span class="flex-container price">
+                        <span class="price-symbol">$</span>
+                        <span class="price-int">{{ product_info.6.price }}</span>
+                        <span class="price-float"></span>
+                    </span>
+                </div>
                 <div style="margin-bottom: 3%;"><a href="">Buy on Amazon >>></a></div>
             </div>
         </div>
     </div>
 
     <!-- module four product-->
-    <div class="wrap">
+    <main>
 
         <div class="container grid-container products-shelf">
             <div class="margin-around">
                 <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.5.first_img }}" alt=""></a></div>
-                <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}" title="{{ product_info.5.title }}" class="display-row-3">{{ product_info.5.title }}</a></div>
-                <div>$<b>{{ product_info.5.price }}</b></div>
+                <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}" title="{{ product_info.5.title }}" class="display-row-3"><h1>{{ product_info.5.title }}</h1></a></div>
+                <div>
+                    <span class="flex-container price">
+                        <span class="price-symbol">$</span>
+                        <span class="price-int">{{ product_info.5.price }}</span>
+                        <span class="price-float"></span>
+                    </span>
+                </div>
+                <div>
+                    <span class="coupon">Coupon: 20% off</span>
+                </div>
             </div>
             <div class="margin-around">
                 <div><a href="products&asin={{ product_info.6.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.6.first_img }}" alt=""></a></div>
-                <div><a href="products&asin={{ product_info.6.asin }}{{ includ_user_id_url }}" title="{{ product_info.6.title }}" class="display-row-3">{{ product_info.6.title }}</a></div>
-                <div>$<b>{{ product_info.6.price }}</b></div>
+                <div><a href="products&asin={{ product_info.6.asin }}{{ includ_user_id_url }}" title="{{ product_info.6.title }}" class="display-row-3"><h1>{{ product_info.6.title }}</h1></a></div>
+                <div>
+                    <span class="flex-container price">
+                        <span class="price-symbol">$</span>
+                        <span class="price-int">{{ product_info.6.price }}</span>
+                        <span class="price-float"></span>
+                    </span>
+                </div>
             </div>
             <div class="margin-around">
                 <div><a href="products&asin={{ product_info.7.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.7.first_img }}" alt=""></a></div>
                 <div><a href="products&asin={{ product_info.7.asin }}{{ includ_user_id_url }}" title="{{ product_info.7.title }}" class="display-row-3">{{ product_info.7.title }}</a></div>
-                <div>$<b>{{ product_info.7.price }}</b></div>
+                <div>
+                    <span class="flex-container price">
+                        <span class="price-symbol">$</span>
+                        <span class="price-int">{{ product_info.7.price }}</span>
+                        <span class="price-float"></span>
+                    </span>
+                </div>
+                <div>
+                    <span class="coupon">Coupon: 20% off</span>
+                </div>
             </div>
             <div class="margin-around">
                 <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.8.first_img }}" alt=""></a></div>
                 <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}" title="{{ product_info.8.title }}" class="display-row-3">{{ product_info.8.title }}</a></div>
-                <div>$<b>{{ product_info.8.price }}</b></div>
+                <div>
+                    <span class="flex-container price">
+                        <span class="price-symbol">$</span>
+                        <span class="price-int">{{ product_info.8.price }}</span>
+                        <span class="price-float"></span>
+                    </span>
+                </div>
+            </div>
+            <div class="margin-around">
+                <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.8.first_img }}" alt=""></a></div>
+                <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}" title="{{ product_info.8.title }}" class="display-row-3">{{ product_info.8.title }}</a></div>
+                <div>
+                    <span class="flex-container price">
+                        <span class="price-symbol">$</span>
+                        <span class="price-int">{{ product_info.8.price }}</span>
+                        <span class="price-float"></span>
+                    </span>
+                </div>
             </div>
         </div>
         
-    </div>
+    </main>
 
     <!-- <div id="B0BTWT5GL8" class="wrap" img_name="{{ img_name.B0BTWT5GL8 }}">
     
@@ -119,6 +173,5 @@
 
 
     {% include "footer.html" %}
-
 </body>
 </html>
