--- a/templates/nav.html
+++ b/templates/nav.html
@@ -7,11 +7,12 @@
         <div>
             <a class="brand-plus" href="{{ nav_index.index }}" id="width"></a>
         </div>
-        <div>
-            <ul id="app_list" class="app-list grid no-list-style">
+        <div class="flex-container">
+            <ul id="app_list" class="nav-app-list flex-container">
                 {% for key, value in nav_nav.items %}
                 <li><a href="{{ value }}">{{ key }}</a></li>
                 {% endfor %}
+                
                 <!-- {% if user_account %}
                 <li><a href="{{ nav_account.signUp.0 }}">{{ nav_account.signUp.1 }}</a></li>
                 <li><a href="{{ nav_account.login.0 }}">{{ nav_account.login.1 }}</a></li>
@@ -19,6 +20,7 @@
                 <li><a href="{{ nav_account.login.0 }}">{{ user_account }}</a></li>
                 {% endif %} -->
             </ul>
+            <div id="hei" style="line-height: 55px;"></div>
         </div>
         <div class="account flex-container">
             <ul>
@@ -52,9 +54,9 @@
 <!-- admin nav -->
 {% if user_account %}
 <nav style="background-color: #eee;">
-    <ul class="container grid">
+    <ul class="container flex-container">
         {% for key, value in nav_admin.items %}
-        <li><a href="{{ value }}">{{ key }}</a></li>
+        <li style="margin-right: 3%; height: 30px; line-height: 30px;"><a href="{{ value }}">{{ key }}</a></li>
         {% endfor %}
     </ul>
 </nav>
