--- a/templates/create-coupon.html
+++ b/templates/create-coupon.html
@@ -16,7 +16,7 @@
         <div class="container">
             
             <!-- <form class="login" action="/JAL/coupon&=public-done" method="post"> -->
-            <form class="login" action="{{ nav_admin.Promote }}=create-done" method="post">
+            <form class="login" action="{{ nav_admin.CouponRelease }}=create-done" method="post">
                 {%csrf_token%}
                 <br>
                 <div class="container" style="border: 1px dashed #ff8800; border-radius: 6px;">
