--- a/templates/create-promote.html
+++ b/templates/create-promote.html
@@ -44,6 +44,8 @@
                 <textarea style="font-size: 18px;" name="bullet_point_02" id="" cols="130" rows="2"></textarea>
                 <h3><b>Title-03</b></h3>
                 <textarea style="font-size: 18px;" name="bullet_point_03" id="" cols="130" rows="2"></textarea>
+                <h3><b>ReleaseChannel</b></h3>
+                <textarea style="font-size: 18px;" name="bullet_point_03" id="" cols="130" rows="2"></textarea>
             </div>
             <!-- <br>
             <div class="container products-shelf">
