--- a/templates/edit-promote.html
+++ b/templates/edit-promote.html
@@ -31,8 +31,8 @@
             <br>
             <div class="container">
                 <!-- <b>id</b><h3><input style="font-size: 18px;" type="text" name="id" id="" value="{{ id.0.id }}" /></h3> -->
-                <b>promote_type</b><h3>{{ promote_info.0.promote_type }}</h3>
-                <b>promote_code</b><h3>{{ promote_info.0.promote_code }}</h3>
+                <b>promote_type</b><h3>{{ promote_info.0.promote_type }}<input style="display: none; font-size: 18px;" type="text" name="promote_type" id="" value="{{ promote_info.0.promote_type }}" /></h3>
+                <b>promote_code</b><h3>{{ promote_info.0.promote_code }}<input style="display: none; font-size: 18px;" type="text" name="promote_code" id="" value="{{ promote_info.0.promote_code }}" /></h3>
                 <h3>promote_img</h3>
                 <textarea style="font-size: 18px;" name="promote_img" id="" cols="130" rows="2">{{ promote_info.0.promote_img }}</textarea>
                 <h3>promote_url</h3>
@@ -42,7 +42,9 @@
                 <h3><b>Title-02</b></h3>
                 <textarea style="font-size: 18px;" name="bullet_point_02" id="" cols="130" rows="2">{{ promote_info.0.bullet_point_02 }}</textarea>
                 <h3><b>Title-03</b></h3>
-                <textarea style="font-size: 18px;" name="bullet_point_03" id="" cols="130" rows="2">{{ promote_info.0.bullet_point_03 }}</textarea>
+                <textarea style="font-size: 18px;" name="promote_channel" id="" cols="130" rows="2">{{ promote_info.0.promote_channel }}</textarea>
+                <h3><b>ReleaseChannel</b></h3>
+                <textarea style="font-size: 18px;" name="bullet_point_03" id="" cols="130" rows="2"></textarea>
             </div>
             <!-- <br>
             <div class="container products-shelf">
