--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
                     <span>{{ promote_info.bullet_point_02 }}</span>
                 </div>
                 <div>
-                    <a href="{{ promote_url }}" class="learnMore auto-margin">Learn more</a>
+                    <a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a>
                 </div>
             </div>
         </div>
