--- a/templates/nav.html
+++ b/templates/nav.html
@@ -52,7 +52,7 @@
     </div>
 </nav>
 <!-- admin nav -->
-{% if user_account %}
+{% if admin_account %}
 <nav style="background-color: #eee;">
     <ul class="container flex-container">
         {% for key, value in nav_admin.items %}
