--- a/templates/edit-account.html
+++ b/templates/edit-account.html
@@ -14,7 +14,7 @@
 
         <div class="container">
             
-            <form class="login" action="/JAL/myAccount&=edit-status-done" method="post">
+            <form class="login" action="/JAL/myAccount&=edit-done" method="post">
                 {%csrf_token%}
                 <!-- {{ form }} -->
                 <div style="align-content: center;">
