--- a/templates/edit-promote.html
+++ b/templates/edit-promote.html
@@ -42,9 +42,9 @@
                 <h3><b>Title-02</b></h3>
                 <textarea style="font-size: 18px;" name="bullet_point_02" id="" cols="130" rows="2">{{ promote_info.0.bullet_point_02 }}</textarea>
                 <h3><b>Title-03</b></h3>
-                <textarea style="font-size: 18px;" name="promote_channel" id="" cols="130" rows="2">{{ promote_info.0.promote_channel }}</textarea>
+                <textarea style="font-size: 18px;" name="bullet_point_03" id="" cols="130" rows="2">{{ promote_info.0.bullet_point_03 }}</textarea>
                 <h3><b>ReleaseChannel</b></h3>
-                <textarea style="font-size: 18px;" name="bullet_point_03" id="" cols="130" rows="2"></textarea>
+                <textarea style="font-size: 18px;" name="promote_channel" id="" cols="130" rows="2">{{ promote_info.0.promote_channel }}</textarea>
             </div>
             <!-- <br>
             <div class="container products-shelf">
