--- a/templates/head.html
+++ b/templates/head.html
@@ -1,6 +1,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="referrer" content="no-referrer">
 
+<!-- fresh page /10s -->
+<!-- <meta http-equiv="refresh" content="10; url=http://www.163.com"> -->
+
 <!-- del temp-->
 <meta http-equiv="Expires" content="0">
 <meta http-equiv="Cache-Control" content="no-cache">
