--- a/templates/listing.html
+++ b/templates/listing.html
@@ -3,6 +3,32 @@
 <html>
 <head>
 {% include "head.html" %}
+<!-- <script>
+window.onload = function()
+{  
+    num = Math.floor(Math.random()*10)
+    console.log(num)
+
+    var a = document.getElementById('1')
+    var b = document.getElementById('2')
+    var c = document.getElementById('3')
+    console.log('a: ', a)
+}
+function nex()
+{
+    // a.style.display = "none"
+    // b.style.display = ""
+    a.style.transform = 'translateX(-590px)'
+    b.style.transform = 'translateX(-590px)'
+    c.style.transform = 'translateX(-590px)'
+}
+function pre()
+{
+    a.style.transform = 'translateX(0)'
+    b.style.transform = 'translateX(0)'
+    c.style.transform = 'translateX(0)'
+}
+</script> -->
 <title>{{ product_info.title }}</title>
 </head>
 <body page_id="{{ page_id }}">
@@ -15,15 +41,33 @@
         <!-- 产品图片及价格信息 -->
         <div class="container grid-listing">
             <div>
-                <div>
-                    <img src="{{ product_info.first_img }}" alt="" />
+                <div class="flex-container" style="justify-content: space-between;">
+                    <div><span onclick="prea()" style="width: 25px; line-height: 590px; font-size: 36px; cursor: pointer;"> &lt; </span></div>
+                    <div style="width: 590px; height: 590px; overflow: hidden; border-radius: 6px;">
+                        <div id="img_7" class="listing-img" style="width: 590px; height: 590px; display: flex; position: relative; left: 0;">
+                            <div id="1" style="width: 590px; height: 590px;"><img style="width: 590px;" src="/static/image/products/B0BTXB89PG/v1.00/7/00-1-01-Listing.jpg" alt=""></div>
+                            <div id="2" style="width: 590px; height: 590px;"><img style="width: 590px;" src="/static/image/products/B0BTXB89PG/v1.00/7/2-01-Listing.jpg" alt=""></div>
+                            <div id="3" style="width: 590px; height: 590px;"><img style="width: 590px;" src="/static/image/products/B0BTXB89PG/v1.00/7/3-01-Listing.jpg" alt=""></div>
+                            <div id="4" style="width: 590px; height: 590px;"><img style="width: 590px;" src="/static/image/products/B0BTXB89PG/v1.00/7/4-01-Listing.jpg" alt=""></div>
+                            <div id="5" style="width: 590px; height: 590px;"><img style="width: 590px;" src="/static/image/products/B0BTXB89PG/v1.00/7/5-01-Listing.jpg" alt=""></div>
+                            <div id="6" style="width: 590px; height: 590px;"><img style="width: 590px;" src="/static/image/products/B0BTXB89PG/v1.00/7/6-01-Listing.jpg" alt=""></div>
+                            <div id="7" style="width: 590px; height: 590px;"><img style="width: 590px;" src="/static/image/products/B0BTXB89PG/v1.00/7/7-01-Listing.jpg" alt=""></div>
+                        </div>
+                    </div>
+                    <div><span onclick="nexa()"  style="width: 25px; line-height: 590px; font-size: 36px; cursor: pointer;"> &gt; </span></div>
+                </div>
+                <div class="flex-container" style="margin-top: 20px; justify-content: space-evenly;">
+                    <div id="7-1" onclick="cho(1)" style="width: 80px; height: 80px; cursor: pointer; border: 2px solid #f6f6f6;"><img style="width: 80px;" src="/static/image/products/B0BTXB89PG/v1.00/7/00-1-01-Listing.jpg" alt=""></div>
+                    <div id="7-2" onclick="cho(2)" style="width: 80px; height: 80px; cursor: pointer; border: 2px solid #f6f6f6;"><img style="width: 80px;" src="/static/image/products/B0BTXB89PG/v1.00/7/2-01-Listing.jpg" alt=""></div>
+                    <div id="7-3" onclick="cho(3)" style="width: 80px; height: 80px; cursor: pointer; border: 2px solid #f6f6f6;"><img style="width: 80px;" src="/static/image/products/B0BTXB89PG/v1.00/7/3-01-Listing.jpg" alt=""></div>
+                    <div id="7-4" onclick="cho(4)" style="width: 80px; height: 80px; cursor: pointer; border: 2px solid #f6f6f6;"><img style="width: 80px;" src="/static/image/products/B0BTXB89PG/v1.00/7/4-01-Listing.jpg" alt=""></div>
+                    <div id="7-5" onclick="cho(5)" style="width: 80px; height: 80px; cursor: pointer; border: 2px solid #f6f6f6;"><img style="width: 80px;" src="/static/image/products/B0BTXB89PG/v1.00/7/5-01-Listing.jpg" alt=""></div>
+                    <div id="7-6" onclick="cho(6)" style="width: 80px; height: 80px; cursor: pointer; border: 2px solid #f6f6f6;"><img style="width: 80px;" src="/static/image/products/B0BTXB89PG/v1.00/7/6-01-Listing.jpg" alt=""></div>
+                    <div id="7-7" onclick="cho(7)" style="width: 80px; height: 80px; cursor: pointer; border: 2px solid #f6f6f6;"><img style="width: 80px;" src="/static/image/products/B0BTXB89PG/v1.00/7/7-01-Listing.jpg" alt=""></div>
                 </div>
             </div>
             <div class="product-info">
-            <!-- <div> -->
-                <div><h1>{{ product_info.title }}</h1></div>
-                <!-- <div><h2 class="price_init">$ {{ product_info.price }}</h2></div> -->
-                
+                <h1>{{ product_info.title }}</h1>
                 <div>
                     <span class="flex-container price">
                         <span class="price-symbol">$</span>
@@ -31,14 +75,6 @@
                         <span class="price-float"></span>
                     </span>
                 </div>
-                
-                <!-- <div> -->
-                    <!-- <form action="/JAL/" method="post"> -->
-                        <!-- {%csrf_token%} -->
-                        <!-- <a href="" id="cart" value="{{ page_id }}" target="_blank" class="widget-btn">Add to Cart</a> -->
-                        <!-- <button href="" type="submit" name="cart" value="{{ page_id }}" class="widget-btn">Add to Cart</button> -->
-                    <!-- </form> -->
-                <!-- </div> -->
                 <div><a href="{{ amazon }}" target="_blank" class="widget-btn">Buy on Amazon</a></div>
                 <div>
                     <span class="coupon">Coupon: 20% off | {{ product_info.asin }} | {{ product_info.status }}</span>
@@ -59,8 +95,66 @@
                     </ul>
                 </div>
             </div>
-        </main>
-
+        </div>
+    </main>
+    <main id="{{ page_id }}">
+        <!-- 产品图片及价格信息 -->
+        <div class="container grid-listing">
+            <div>
+                <div class="flex-container" style="justify-content: space-between;">
+                    <div><span onclick="pre()" style="width: 25px; line-height: 590px; font-size: 36px; cursor: pointer;"> &lt; </span></div>
+                    <div class="listing-img" style="width: 590px; height: 590px; display: flex; overflow: hidden; border-radius: 6px;">
+                        <div id="1" style="position: relative; left: 0; width: 590px; height: 590px;"><img style="width: 590px;" src="/static/image/products/B0BTXB89PG/v1.00/7/00-1-01-Listing.jpg" alt=""></div>
+                        <div id="2" style="position: relative; left: 0; width: 590px; height: 590px;"><img style="width: 590px;" src="/static/image/products/B0BTXB89PG/v1.00/7/2-01-Listing.jpg" alt=""></div>
+                        <div id="3" style="position: relative; left: 0; width: 590px; height: 590px;"><img style="width: 590px;" src="/static/image/products/B0BTXB89PG/v1.00/7/3-01-Listing.jpg" alt=""></div>
+                        <div id="4" style="position: relative; left: 0; width: 590px; height: 590px;"><img style="width: 590px;" src="/static/image/products/B0BTXB89PG/v1.00/7/4-01-Listing.jpg" alt=""></div>
+                        <div id="5" style="position: relative; left: 0; width: 590px; height: 590px;"><img style="width: 590px;" src="/static/image/products/B0BTXB89PG/v1.00/7/5-01-Listing.jpg" alt=""></div>
+                        <div id="6" style="position: relative; left: 0; width: 590px; height: 590px;"><img style="width: 590px;" src="/static/image/products/B0BTXB89PG/v1.00/7/6-01-Listing.jpg" alt=""></div>
+                        <div id="7" style="position: relative; left: 0; width: 590px; height: 590px;"><img style="width: 590px;" src="/static/image/products/B0BTXB89PG/v1.00/7/7-01-Listing.jpg" alt=""></div>
+                    </div>
+                    <div><span onclick="nex()"  style="width: 25px; line-height: 590px; font-size: 36px; cursor: pointer;"> &gt; </span></div>
+                </div>
+                <div class="flex-container" style="margin-top: 20px; justify-content: space-evenly;">
+                    <div onclick="cho(1)" style="cursor: pointer;"><img style="width: 80px;" src="/static/image/products/B0BTXB89PG/v1.00/7/00-1-01-Listing.jpg" alt=""></div>
+                    <div onclick="cho(2)" style="cursor: pointer;"><img style="width: 80px;" src="/static/image/products/B0BTXB89PG/v1.00/7/2-01-Listing.jpg" alt=""></div>
+                    <div onclick="cho(3)" style="cursor: pointer;"><img style="width: 80px;" src="/static/image/products/B0BTXB89PG/v1.00/7/3-01-Listing.jpg" alt=""></div>
+                    <div onclick="cho(4)" style="cursor: pointer;"><img style="width: 80px;" src="/static/image/products/B0BTXB89PG/v1.00/7/4-01-Listing.jpg" alt=""></div>
+                    <div onclick="cho(5)" style="cursor: pointer;"><img style="width: 80px;" src="/static/image/products/B0BTXB89PG/v1.00/7/5-01-Listing.jpg" alt=""></div>
+                    <div onclick="cho(6)" style="cursor: pointer;"><img style="width: 80px;" src="/static/image/products/B0BTXB89PG/v1.00/7/6-01-Listing.jpg" alt=""></div>
+                    <div onclick="cho(7)" style="cursor: pointer;"><img style="width: 80px;" src="/static/image/products/B0BTXB89PG/v1.00/7/7-01-Listing.jpg" alt=""></div>
+                </div>
+            </div>
+            <div class="product-info">
+                <h1>{{ product_info.title }}</h1>
+                <div>
+                    <span class="flex-container price">
+                        <span class="price-symbol">$</span>
+                        <span class="price-int">{{ product_info.price }}</span>
+                        <span class="price-float"></span>
+                    </span>
+                </div>
+                <div><a href="{{ amazon }}" target="_blank" class="widget-btn">Buy on Amazon</a></div>
+                <div>
+                    <span class="coupon">Coupon: 20% off | {{ product_info.asin }} | {{ product_info.status }}</span>
+                </div>
+                <div>
+                    <ul class="bullet-point">
+                        {% for bullet_point in product_bullet_point %}
+                        <li><p>{{ bullet_point }}</p></li>
+                        {% endfor %}
+                        
+                        <!-- <li>{{ product_description.bullet_point_00 }}</li>
+                        <li>{{ product_description.bullet_point_01 }}</li>
+                        <li>{{ product_description.bullet_point_02 }}</li>
+                        <li>{{ product_description.bullet_point_03 }}</li>
+                        <li>{{ product_description.bullet_point_04 }}</li>
+                        <li>{{ product_description.bullet_point_05 }}</li>
+                        <li>{{ product_description.bullet_point_06 }}</li> -->
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </main>
         <!-- <div class="container">
 
             <img src="{{ product_img.img_970_url.0 }}" alt="" />
